--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 <h1>Hello World! Romesh here</h1>
-<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="romesh-borawake" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/romesh-borawake?trk=profile-badge">Romesh Borawake</a></div>
-               
 <p>I'm hosted with GitHub Pages.</p>
-  
 </body>
+  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="romesh-borawake" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/romesh-borawake?trk=profile-badge">Romesh Borawake</a></div>
+              
 </html>
